page quem somos criada

--- a/css/quemsomos.css
+++ b/css/quemsomos.css
@@ -1,13 +1,836 @@
-/*CSS DA PAGE HOME*/
+/*CSS DA PAGE QUEM SOMOS*/
 
 h3 {
     margin-top: 40px;
-    font-size: 1.8;
+    font-size: 1.8em;
     color: rgb(255, 8, 0);
 }
 
 .cardquemsomos {
-    margin-top: 15px;
-    height: 400px;
-    border: 1px solid red;
+    margin-top: 10px;
+    height: 465px;
+    background: #d3d3d3;
+}
+
+.cardquemsomos img {
+    width: 250px;
+    margin-top: -40px;
+}
+
+.cardquemsomos p {
+    font-size: 1.2em;
+    text-align: center;
+    margin-top: -55px;
+    border-bottom: 1px solid #fff;
+}
+
+.cardquemsomos .dunamis {
+    color: rgb(255, 8, 0);
+}
+
+.cardquemsomos .atendimento {
+    margin-top: 10px !important;
+}
+
+.border {
+    height: 20px;
+    background: rgb(255, 8, 0);
+}
+
+.card2 {
+    margin-top: 10px;
+    background: #B71C1C;
+    height: 300px;
+}
+
+.card2 p {
+    color: #fff;
+    margin-top: 20px;
+}
+
+.card2 .semborder {
+    border-bottom: none;
+}
+
+.card2 .lista li {
+    list-style: none;
+    color: #fff;
+    margin-top: 10px;
+    padding-top: 10px;
+    font-weight: bold;
+}
+
+.card3 {
+    height: 70px;
+}
+
+.card3 span {
+    font-size: 1.3em;
+    font-weight: 900;
+    line-height: 32px;
+}
+
+
+/*mobile 375*/
+
+@media screen and (min-width: 375px) {
+    h3 {
+        margin-top: 40px;
+        font-size: 1.8em;
+        color: rgb(255, 8, 0);
+    }
+    .cardquemsomos {
+        margin-top: 10px;
+        height: 410px;
+        background: #d3d3d3;
+    }
+    .cardquemsomos img {
+        width: 250px;
+        margin-top: -40px;
+    }
+    .cardquemsomos p {
+        font-size: 1.2em;
+        text-align: center;
+        margin-top: -40px;
+        border-bottom: 1px solid #fff;
+    }
+    .cardquemsomos .dunamis {
+        color: rgb(255, 8, 0);
+    }
+    .cardquemsomos .atendimento {
+        margin-top: 10px !important;
+    }
+    .border {
+        height: 20px;
+        background: rgb(255, 8, 0);
+    }
+    .card2 {
+        margin-top: 10px;
+        background: #B71C1C;
+        height: 300px;
+    }
+    .card2 p {
+        color: #fff;
+        margin-top: 20px;
+    }
+    .card2 .semborder {
+        border-bottom: none;
+    }
+    .card2 .lista li {
+        list-style: none;
+        color: #fff;
+        margin-top: 10px;
+        padding-top: 10px;
+        font-weight: bold;
+    }
+    .card3 {
+        height: 70px;
+    }
+    .card3 span {
+        font-size: 1.3em;
+        font-weight: 900;
+        line-height: 32px;
+    }
+}
+
+
+/*mobile 425*/
+
+@media screen and (min-width: 425px) {
+    h3 {
+        margin-top: 40px;
+        font-size: 1.8em;
+        color: rgb(255, 8, 0);
+    }
+    .cardquemsomos {
+        margin-top: 10px;
+        height: 410px;
+        background: #d3d3d3;
+    }
+    .cardquemsomos img {
+        width: 250px;
+        margin-top: -40px;
+    }
+    .cardquemsomos p {
+        font-size: 1.2em;
+        text-align: center;
+        margin-top: -40px;
+        border-bottom: 1px solid #fff;
+    }
+    .cardquemsomos .dunamis {
+        color: rgb(255, 8, 0);
+    }
+    .cardquemsomos .atendimento {
+        margin-top: 10px !important;
+    }
+    .border {
+        height: 20px;
+        background: rgb(255, 8, 0);
+    }
+    .card2 {
+        margin-top: 10px;
+        background: #B71C1C;
+        height: 300px;
+    }
+    .card2 p {
+        color: #fff;
+        margin-top: 20px;
+    }
+    .card2 .semborder {
+        border-bottom: none;
+    }
+    .card2 .lista li {
+        list-style: none;
+        color: #fff;
+        margin-top: 10px;
+        padding-top: 10px;
+        font-weight: bold;
+    }
+    .card3 {
+        height: 70px;
+    }
+    .card3 span {
+        font-size: 1.3em;
+        font-weight: 900;
+        line-height: 32px;
+    }
+}
+
+
+/*tablet 601 PX*/
+
+@media screen and (min-width: 601px) {
+    h3 {
+        margin-top: 40px;
+        font-size: 1.8em;
+        color: rgb(255, 8, 0);
+    }
+    .cardquemsomos {
+        margin-top: 10px;
+        height: 340px;
+        background: #d3d3d3;
+    }
+    .cardquemsomos img {
+        width: 250px;
+        margin-top: -40px;
+    }
+    .cardquemsomos p {
+        font-size: 1.2em;
+        text-align: center;
+        margin-top: -40px;
+        border-bottom: 1px solid #fff;
+    }
+    .cardquemsomos .dunamis {
+        color: rgb(255, 8, 0);
+    }
+    .cardquemsomos .atendimento {
+        margin-top: 10px !important;
+    }
+    .border {
+        height: 20px;
+        background: rgb(255, 8, 0);
+    }
+    .card2 {
+        margin-top: 10px;
+        background: #B71C1C;
+        height: 280px;
+    }
+    .card2 p {
+        color: #fff;
+        margin-top: 20px;
+    }
+    .card2 .semborder {
+        border-bottom: none;
+    }
+    .card2 .lista li {
+        list-style: none;
+        color: #fff;
+        margin-top: 10px;
+        padding-top: 10px;
+        font-weight: bold;
+    }
+    .card3 {
+        height: 80px;
+    }
+    .card3 span {
+        font-size: 1.3em;
+        font-weight: 900;
+        line-height: 35px;
+    }
+}
+
+
+/*tablet 730 PX*/
+
+@media screen and (min-width: 730px) {
+    h3 {
+        margin-top: 40px;
+        font-size: 1.8em;
+        color: rgb(255, 8, 0);
+    }
+    .cardquemsomos {
+        margin-top: 10px;
+        height: 340px;
+        background: #d3d3d3;
+    }
+    .cardquemsomos img {
+        width: 250px;
+        margin-top: -40px;
+    }
+    .cardquemsomos p {
+        font-size: 1.3em;
+        text-align: center;
+        margin-top: -50px;
+        border-bottom: 1px solid #fff;
+    }
+    .cardquemsomos .dunamis {
+        color: rgb(255, 8, 0);
+    }
+    .cardquemsomos .atendimento {
+        margin-top: 10px !important;
+    }
+    .border {
+        height: 20px;
+        background: rgb(255, 8, 0);
+    }
+    .card2 {
+        margin-top: 10px;
+        background: #B71C1C;
+        height: 280px;
+    }
+    .card2 p {
+        color: #fff;
+        margin-top: 20px;
+    }
+    .card2 .semborder {
+        border-bottom: none;
+    }
+    .card2 .lista li {
+        font-size: 1.2em;
+        list-style: none;
+        color: #fff;
+        margin-top: 10px;
+        padding-top: 10px;
+        font-weight: bold;
+    }
+    .card3 {
+        height: 50px;
+    }
+    .card3 span {
+        font-size: 1.3em;
+        font-weight: 900;
+        line-height: 50px;
+    }
+}
+
+
+/*tablet 768 PX*/
+
+@media screen and (min-width: 768px) {
+    h3 {
+        margin-top: 40px;
+        font-size: 1.8em;
+        color: rgb(255, 8, 0);
+    }
+    .cardquemsomos {
+        margin-top: 10px;
+        height: 340px;
+        background: #d3d3d3;
+    }
+    .cardquemsomos img {
+        width: 250px;
+        margin-top: -40px;
+    }
+    .cardquemsomos p {
+        font-size: 1.3em;
+        text-align: center;
+        margin-top: -50px;
+        border-bottom: 1px solid #fff;
+    }
+    .cardquemsomos .dunamis {
+        color: rgb(255, 8, 0);
+    }
+    .cardquemsomos .atendimento {
+        margin-top: 10px !important;
+    }
+    .border {
+        height: 20px;
+        background: rgb(255, 8, 0);
+    }
+    .card2 {
+        margin-top: 10px;
+        background: #B71C1C;
+        height: 280px;
+    }
+    .card2 p {
+        color: #fff;
+        margin-top: 20px;
+    }
+    .card2 .semborder {
+        border-bottom: none;
+    }
+    .card2 .lista li {
+        font-size: 1.2em;
+        list-style: none;
+        color: #fff;
+        margin-top: 10px;
+        padding-top: 10px;
+        font-weight: bold;
+    }
+    .card3 {
+        height: 50px;
+    }
+    .card3 span {
+        font-size: 1.3em;
+        font-weight: 900;
+        line-height: 50px;
+    }
+}
+
+
+/*tablet 810 PX*/
+
+@media screen and (min-width: 810px) {
+    h3 {
+        margin-top: 40px;
+        font-size: 1.8em;
+        color: rgb(255, 8, 0);
+    }
+    .cardquemsomos {
+        margin-top: 10px;
+        height: 320px;
+        background: #d3d3d3;
+    }
+    .cardquemsomos img {
+        width: 250px;
+        margin-top: -40px;
+    }
+    .cardquemsomos p {
+        font-size: 1.3em;
+        text-align: center;
+        margin-top: -50px;
+        border-bottom: 1px solid #fff;
+    }
+    .cardquemsomos .dunamis {
+        color: rgb(255, 8, 0);
+    }
+    .cardquemsomos .atendimento {
+        margin-top: 10px !important;
+    }
+    .border {
+        height: 20px;
+        background: rgb(255, 8, 0);
+    }
+    .card2 {
+        margin-top: 10px;
+        background: #B71C1C;
+        height: 280px;
+    }
+    .card2 p {
+        color: #fff;
+        margin-top: 20px;
+    }
+    .card2 .semborder {
+        border-bottom: none;
+    }
+    .card2 .lista li {
+        font-size: 1.2em;
+        list-style: none;
+        color: #fff;
+        margin-top: 10px;
+        padding-top: 10px;
+        font-weight: bold;
+    }
+    .card3 {
+        height: 50px;
+    }
+    .card3 span {
+        font-size: 1.3em;
+        font-weight: 900;
+        line-height: 50px;
+    }
+}
+
+
+/*tablet 910 PX*/
+
+@media screen and (min-width: 910px) {
+    h3 {
+        margin-top: 40px;
+        font-size: 1.8em;
+        color: rgb(255, 8, 0);
+    }
+    .cardquemsomos {
+        margin-top: 10px;
+        height: 320px;
+        background: #d3d3d3;
+    }
+    .cardquemsomos img {
+        width: 250px;
+        margin-top: -40px;
+    }
+    .cardquemsomos p {
+        font-size: 1.3em;
+        text-align: center;
+        margin-top: -50px;
+        border-bottom: 1px solid #fff;
+    }
+    .cardquemsomos .dunamis {
+        color: rgb(255, 8, 0);
+    }
+    .cardquemsomos .atendimento {
+        margin-top: 10px !important;
+    }
+    .border {
+        height: 20px;
+        background: rgb(255, 8, 0);
+    }
+    .card2 {
+        margin-top: 10px;
+        background: #B71C1C;
+        height: 280px;
+    }
+    .card2 p {
+        color: #fff;
+        margin-top: 20px;
+    }
+    .card2 .semborder {
+        border-bottom: none;
+    }
+    .card2 .lista li {
+        font-size: 1.2em;
+        list-style: none;
+        color: #fff;
+        margin-top: 10px;
+        padding-top: 10px;
+        font-weight: bold;
+    }
+    .card3 {
+        height: 50px;
+    }
+    .card3 span {
+        font-size: 1.3em;
+        font-weight: 900;
+        line-height: 50px;
+    }
+}
+
+@media screen and (min-width: 1017px) {
+    h3 {
+        margin-top: 40px;
+        font-size: 2.4em;
+        color: rgb(255, 8, 0);
+    }
+    .cardquemsomos {
+        margin-top: 10px;
+        height: 360px;
+        background: #d3d3d3;
+    }
+    .cardquemsomos img {
+        width: 250px;
+        margin-top: -40px;
+    }
+    .cardquemsomos p {
+        font-size: 1.4em;
+        text-align: center;
+        margin-top: -50px;
+        border-bottom: 1px solid #fff;
+    }
+    .cardquemsomos .dunamis {
+        color: rgb(255, 8, 0);
+    }
+    .cardquemsomos .atendimento {
+        margin-top: 10px !important;
+    }
+    .border {
+        height: 20px;
+        background: rgb(255, 8, 0);
+    }
+    .card2 {
+        margin-top: 10px;
+        background: #B71C1C;
+        height: 290px;
+    }
+    .card2 p {
+        color: #fff;
+        margin-top: 20px;
+    }
+    .card2 .semborder {
+        border-bottom: none;
+    }
+    .card2 .lista li {
+        font-size: 1.2em;
+        list-style: none;
+        color: #fff;
+        margin-top: 10px;
+        padding-top: 10px;
+        font-weight: bold;
+    }
+    .card3 {
+        height: 50px;
+    }
+    .card3 span {
+        font-size: 1.3em;
+        font-weight: 900;
+        line-height: 50px;
+    }
+}
+
+
+/*PC 1100*/
+
+@media screen and (min-width: 1100px) {
+    h3 {
+        margin-top: 40px;
+        font-size: 2.4em;
+        color: rgb(255, 8, 0);
+    }
+    .cardquemsomos {
+        margin-top: 10px;
+        height: 340px;
+        background: #d3d3d3;
+    }
+    .cardquemsomos img {
+        width: 250px;
+        margin-top: -40px;
+    }
+    .cardquemsomos p {
+        font-size: 1.4em;
+        text-align: center;
+        margin-top: -50px;
+        border-bottom: 1px solid #fff;
+    }
+    .cardquemsomos .dunamis {
+        color: rgb(255, 8, 0);
+    }
+    .cardquemsomos .atendimento {
+        margin-top: 10px !important;
+    }
+    .border {
+        height: 20px;
+        background: rgb(255, 8, 0);
+    }
+    .card2 {
+        margin-top: 10px;
+        background: #B71C1C;
+        height: 300px;
+    }
+    .card2 p {
+        color: #fff;
+        margin-top: 20px;
+    }
+    .card2 .semborder {
+        border-bottom: none;
+    }
+    .card2 .lista li {
+        font-size: 1.2em;
+        list-style: none;
+        color: #fff;
+        margin-top: 10px;
+        padding-top: 10px;
+        font-weight: bold;
+    }
+    .card3 {
+        height: 50px;
+    }
+    .card3 span {
+        font-size: 1.3em;
+        font-weight: 900;
+        line-height: 50px;
+    }
+}
+
+
+/*PC 1240*/
+
+@media screen and (min-width: 1240px) {
+    h3 {
+        margin-top: 40px;
+        font-size: 2.4em;
+        color: rgb(255, 8, 0);
+    }
+    .cardquemsomos {
+        margin-top: 10px;
+        height: 380px;
+        background: #d3d3d3;
+    }
+    .cardquemsomos img {
+        width: 300px;
+        margin-top: -40px;
+    }
+    .cardquemsomos p {
+        font-size: 1.4em;
+        text-align: center;
+        margin-top: -60px;
+        border-bottom: 1px solid #fff;
+    }
+    .cardquemsomos .dunamis {
+        color: rgb(255, 8, 0);
+    }
+    .cardquemsomos .atendimento {
+        margin-top: 10px !important;
+    }
+    .border {
+        height: 20px;
+        background: rgb(255, 8, 0);
+    }
+    .card2 {
+        margin-top: 10px;
+        background: #B71C1C;
+        height: 320px;
+    }
+    .card2 p {
+        color: #fff;
+        margin-top: 20px;
+    }
+    .card2 .semborder {
+        border-bottom: none;
+    }
+    .card2 .lista li {
+        font-size: 1.4em;
+        list-style: none;
+        color: #fff;
+        margin-top: 10px;
+        padding-top: 10px;
+        font-weight: bold;
+    }
+    .card3 {
+        margin-top: 20px;
+        height: 70px;
+    }
+    .card3 span {
+        font-size: 1.6em;
+        font-weight: 900;
+        line-height: 70px;
+    }
+}
+
+
+/*PC 1340*/
+
+@media screen and (min-width: 1340px) {
+    h3 {
+        margin-top: 40px;
+        font-size: 2.4em;
+        color: rgb(255, 8, 0);
+    }
+    .cardquemsomos {
+        margin-top: 10px;
+        height: 350px;
+        background: #d3d3d3;
+    }
+    .cardquemsomos img {
+        width: 300px;
+        margin-top: -40px;
+    }
+    .cardquemsomos p {
+        font-size: 1.4em;
+        text-align: center;
+        margin-top: -60px;
+        border-bottom: 1px solid #fff;
+    }
+    .cardquemsomos .dunamis {
+        color: rgb(255, 8, 0);
+    }
+    .cardquemsomos .atendimento {
+        margin-top: 10px !important;
+    }
+    .border {
+        height: 20px;
+        background: rgb(255, 8, 0);
+    }
+    .card2 {
+        margin-top: 10px;
+        background: #B71C1C;
+        height: 320px;
+    }
+    .card2 p {
+        color: #fff;
+        margin-top: 20px;
+    }
+    .card2 .semborder {
+        border-bottom: none;
+    }
+    .card2 .lista li {
+        font-size: 1.4em;
+        list-style: none;
+        color: #fff;
+        margin-top: 10px;
+        padding-top: 10px;
+        font-weight: bold;
+    }
+    .card3 {
+        margin-top: 20px;
+        height: 70px;
+    }
+    .card3 span {
+        font-size: 1.6em;
+        font-weight: 900;
+        line-height: 70px;
+    }
+}
+
+
+/*PC 1440*/
+
+@media screen and (min-width: 1440px) {
+    h3 {
+        margin-top: 40px;
+        font-size: 2.4em;
+        color: rgb(255, 8, 0);
+    }
+    .cardquemsomos {
+        margin-top: 10px;
+        height: 350px;
+        background: #d3d3d3;
+    }
+    .cardquemsomos img {
+        width: 300px;
+        margin-top: -40px;
+    }
+    .cardquemsomos p {
+        font-size: 1.4em;
+        text-align: center;
+        margin-top: -60px;
+        border-bottom: 1px solid #fff;
+    }
+    .cardquemsomos .dunamis {
+        color: rgb(255, 8, 0);
+    }
+    .cardquemsomos .atendimento {
+        margin-top: 10px !important;
+    }
+    .border {
+        height: 20px;
+        background: rgb(255, 8, 0);
+    }
+    .card2 {
+        margin-top: 10px;
+        background: #B71C1C;
+        height: 320px;
+    }
+    .card2 p {
+        color: #fff;
+        margin-top: 20px;
+    }
+    .card2 .semborder {
+        border-bottom: none;
+    }
+    .card2 .lista li {
+        font-size: 1.4em;
+        list-style: none;
+        color: #fff;
+        margin-top: 10px;
+        padding-top: 10px;
+        font-weight: bold;
+    }
+    .card3 {
+        margin-top: 20px;
+        height: 70px;
+    }
+    .card3 span {
+        font-size: 1.6em;
+        font-weight: 900;
+        line-height: 70px;
+    }
 }
